<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simply DTMF</string>
    <string name="title_section0">Records</string>
    <string name="title_section1">DTMF</string>
    <string name="title_section2">Tone (beta)</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_edit_dtmf_record_title">Edit DTMF Record</string>

    <string name="about_prompt_donate_label">Donate</string>
    <string name="about_prompt_feedback_label">Feedback</string>
    <!-- <string name="sa_quote">\"The function of good software is to make the complex appear to be simple.\"\n- Grady Booch\n</string> -->
    <!-- <string name="sa_email"><a href="http://simplyadvanced.net/">http://simplyadvanced.net</a></string> -->
    <!-- <string name="sa_feedback">Please send feedback to:\n<a href="mailto:feedback@simplyadvanced.net?subject=Android:%20My%20App%20Feedback">feedback@simplyadvanced.net</a></string> -->

    <string name="menu_action_about">About</string>
    <string name="menu_action_help">Help</string>
    <string name="menu_action_rate_app">Rate app</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_call">Call</string>
    <string name="menu_action_edit">Edit</string>
    <string name="menu_action_delete">Delete</string>
    <string name="prompt_button_feedback_label">Send feedback</string>
    <string name="dtmf_input_save_label">Record</string>
    <string name="dtmf_input_title_label">Title</string>
    <string name="dtmf_input_tone_label">Tone</string>
    <string name="dtmf_input_backspace_content_description">Backspace button</string>
    <string name="tone_frequency_label">Frequency (hz):</string>
    <string name="tone_frequency_max_label">Max freq (hz):</string>
    <string name="tone_frequency_min_label">Min (hz):</string>
    <string name="tone_start_label">Start</string>
    <string name="tone_stop_label">Stop</string>
    <string name="add_contact">Add Contact</string>
    <string name="call_contact">Call Contact</string>
    <string name="record_deleted">Record deleted</string>
    <string name="edit_dtmf_record_title">Edit Record</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty_dtmf_records_list_help">Use the DTMF page to RECORD tones.</string>
    <string name="menu_action_donate">Donate</string>

</resources>
