<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_item_share"
        android:showAsAction="ifRoom"
        android:title="@string/menu_action_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/menu_action_settings"/>
    
    <item
        android:id="@+id/menu_rate_app"
        android:showAsAction="never"
        android:title="@string/menu_action_rate_app"/>
    
    <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/menu_action_about"/>
    
    <item
        android:id="@+id/menu_help"
        android:showAsAction="never"
        android:title="@string/menu_action_help"/>

</menu>
